# http-benches

./: README.md
aspnetcore/: Program.cs  Startup.cs  aspnetcore.sln
database-write/: README.md  docker-compose.yml
database-write/aspnetcore/: Startup.cs  User.cs  aspnetcore.csproj
database-write/aspnetcore/Migrations/: 20200102150848_users.cs
database-write/go-gorm/: .gitignore  main.go
database-write/rust-actix/: Cargo.toml
database-write/rust-actix/migrations/2020-01-02-153258_user/: up.sql
database-write/rust-actix/src/: main.rs  models.rs
files-write/: README.md
files-write/aspnetcore/: Program.cs  aspnetcore.csproj
files-write/golang/: .gitignore  go.mod  go.sum  main.go
files-write/rust-actix/: Cargo.toml
files-write/rust-actix/src/: main.rs
mongo-db-write/: README.md  docker-compose.yml
mongo-db-write/aspnetcore/: Program.cs  aspnetcore.csproj  aspnetcore.sln
mongo-db-write/aspnetcore/Properties/: launchSettings.json
mongo-db-write/golang/: .gitignore  go.mod  go.sum  main.go
mongo-db-write/rust-actix/: Cargo.toml
mongo-db-write/rust-actix/src/: main.rs
postgres-db-write/: README.md
postgres-db-write/aspnetcore/: DataContext.cs  Program.cs
postgres-db-write/aspnetcore/Migrations/: 20200102150848_users.Designer.cs  DataContextModelSnapshot.cs
postgres-db-write/aspnetcore/Properties/: launchSettings.json
postgres-db-write/go-gorm/: main.go
postgres-orm-write/aspnetcore/: aspnetcore.sln
postgres-orm-write/go-gorm/: go.mod  go.sum
postgres-orm-write/rust-actix/: .env
postgres-orm-write/rust-actix/src/: schema.rs
random-serialization/: README.md
random-serialization/aspnetcore/: .gitignore  aspnetcore.csproj
random-serialization/aspnetcore/Properties/: launchSettings.json
random-serialization/golang/: .gitignore  go.mod  main.go
random-serialization/rust-actix/src/: main.rs
remote-svc-call/: README.md
remote-svc-call/aspnetcore/: Program.cs  aspnetcore.sln
remote-svc-call/golang/: .gitignore  go.mod  main.go
remote-svc-call/rust-actix/: Cargo.toml
remote-svc-call/rust-actix/src/: main.rs
remote-svc-call/rust-hyper/: Cargo.toml
remote-svc-call/rust-hyper/src/: main.rs
rust/actix-web/: Cargo.toml
