[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
uuid = { version = "0.8", features = ["v4"] }