[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
reqwest = {version = "0.10.0", features = ["json"] }
failure = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
surf = "1.0.3"