[package]
name = "rust-hyper"
version = "0.1.0"
authors = ["Carlos Landeras <carlos.landeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
hyper = "0.13.1"
failure = "0.1.6"
env_logger = "0.7.1"
hyper-tls = "0.4.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"